<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.xox_ua.practice_07_030618.AddActivity"
    android:padding="10dp">

    <EditText
        android:id="@+id/etAddTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tv_title"
        android:layout_weight="1"/>
    <EditText
        android:id="@+id/etAddAuthor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tv_author"
        android:layout_weight="1"/>
    <RatingBar
        android:id="@+id/addRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"/>
    <EditText
        android:id="@+id/etAddDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        android:gravity="top"
        android:layout_weight="20"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">
        <Button
            android:id="@+id/btnBack"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_back"
            tools:ignore="ButtonStyle" />
        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_save"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

</LinearLayout>
