<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.xox_ua.practice_07_030618.DescriptionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/ivImgDescr"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_launcher_background" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:paddingLeft="10dp">

                <TextView
                    android:id="@+id/tvTitleDescr"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:text="@string/tv_title"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/tvAuthorDescr"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:text="@string/tv_author"
                    android:layout_weight="1"/>

                <RatingBar
                    android:id="@+id/ratingBarDescr"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_marginBottom="10dp"
                    style="?android:attr/ratingBarStyleSmall"
                    android:numStars="5"
                    android:isIndicator="true"/>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/tvDescr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="20"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:scrollbars = "vertical"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">
            <Button
                android:id="@+id/btnBack"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btn_back"
                tools:ignore="ButtonStyle" />
            <Button
                android:id="@+id/btnShare"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btn_share"
                tools:ignore="ButtonStyle" />
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
